tests/neg/i24681.scala
import scala.annotation.targetName

class Foo @targetName("bla") () // error
